# nft-api

./: .gitignore  Cargo.toml  nft.db
blockchain/: hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: MyNFT.sol
blockchain/scripts/: deploy.js
migrations/: 0001_initial_setup.sql
src/: MyNFT.json  blockchain.rs  database.rs  ipfs.rs  main.rs  migrations.rs  models.rs
