[package]
name = "nft-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"       # Web server
serde = { version = "1.0", features = ["derive"] } # For JSON
serde_json = "1.0"      # More JSON help
uuid = { version = "1.0", features = ["v4"] }   # For creating IDs
bytes = "1.0"           # For handling image data
futures = "0.3"         # More async help
dotenv = "0.15"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
actix-multipart = "0.6"
ethers = { version = "2.0", features = ["rustls"] }
ipfs-api-backend-hyper = "0.6"
hex = "0.4"
tokio-stream = "0.1"
rand = "0.8.5"
actix-cors = "0.6.4"
reqwest = { version = "0.11", features = ["json"] }
